# fastqcleaner

./: .gitignore  CMakeLists.txt  LICENSE  README.md  auxilary.c  auxilary.h  bitseq.c  bitseq.h  bitset.c  bitset.h  fqparser.c  fqparser.h  fqrecord.c  fqrecord.h  htsutils.c  htsutils.h  kroundup.h  main.c  nthash.c  nthash.h  tests.c  tests.h
